--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-qr-barcode-scanner": "^2.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.4",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
